Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88834

[REG 6.0.0beta5->RC1] embedded/flickable not compiling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.0, 6.0.1, 6.1.0
    • 6.0.0 RC
    • Core: Event loop
    • Windows10 x64
      MSVC2019 x64 (Visual Studio 2019 Developer Command Prompt v16.7.7)
    • 78cbb25b9d70f1617ff6c912a22ac532b0352bde (qt/qtbase/dev) f4ff1e73b0caf7dcd20c96519d0b6ade806b725e (qt/qtbase/6.0) 0a14eaf04aab6ae9d1e6f56a36ba1a53517e2553 (qt/qtbase/6.0.0)

      Install Qt6.0.0 RC1 content, MSVC2019 x64 used here, but reproduces also on gcc_64, clang_64 and MinGW. Open MSVC2019 x64 native command prompt, add CMake, Ninja and Qt (msvc2019/bin) to path, and compile example embedded/flickable.

      'cmake CMakeLists.txt' finishes fine, but 'cmake --build .' results an error (example was working in beta5):

        Checking Build System
        Automatic MOC and UIC for target flickable
        Building Custom Rule C:/Qt/Qt6.00._testi_prev_creator/Examples/Qt-6.0.0/embedded/flickable/CMakeLists.txt
        mocs_compilation.cpp
        flickable.cpp
      C:\Qt\Qt6.00._testi_prev_creator\Examples\Qt-6.0.0\embedded\flickable\flickable.cpp(199,58): error C2248: 'QMouseEvent:
      :QMouseEvent': cannot access protected member declared in class 'QMouseEvent' [C:\Qt\Qt6.00._testi_prev_creator\Example
      s\Qt-6.0.0\embedded\flickable\flickable.vcxproj]
      C:\Qt\Qt6.00._testi_prev_creator\6.0.0\msvc2019_64\include\QtGui/qevent.h(231): message : see declaration of 'QMouseEve
      nt::QMouseEvent' [C:\Qt\Qt6.00._testi_prev_creator\Examples\Qt-6.0.0\embedded\flickable\flickable.vcxproj]
      C:\Qt\Qt6.00._testi_prev_creator\6.0.0\msvc2019_64\include\QtWidgets\qsystemtrayicon.h(58): message : see declaration o
      f 'QMouseEvent' [C:\Qt\Qt6.00._testi_prev_creator\Examples\Qt-6.0.0\embedded\flickable\flickable.vcxproj]
        main.cpp
        Generating Code...
      

        For Gerrit Dashboard: QTBUG-88834
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes