Use event cloning rather than copying

Fixes: QTBUG-88834
Change-Id: I8c21b07c9d8491f26589f29b04d552835b3cbd11
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit 78cbb25b9d70f1617ff6c912a22ac532b0352bde)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>